docs/examples/valid/extension/forLoop/forBoolFlip.wacc
begin
  for int i = 0 ; i < 3 ; i = i+1 do
    println i
  done
end

