docs/examples/invalid/syntaxErr/extension/forLoop/syntaxErrorForLoop.wacc
begin
	for (int i = 0, i < 2) do
		i = 2
	done
end

